# rust-projects

actix_web_task_service/: Cargo.toml
actix_web_task_service/src/: main.rs
crud-with-sea_orm/: .env  Cargo.toml
crud-with-sea_orm/migration/: Cargo.toml
crud-with-sea_orm/migration/src/: lib.rs  m20220101_000001_post.rs
crud-with-sea_orm/migration/src/migrations/: m20260121_020308_users.rs  mod.rs
crud-with-sea_orm/migration/src/seeds/: mod.rs
crud-with-sea_orm/src/: main.rs  postgres.rs
crud-with-sea_orm/src/api/: mod.rs
crud-with-sea_orm/src/api/users/: mod.rs
crud-with-sea_orm/src/models/entity/: Cargo.toml
crud-with-sea_orm/src/models/entity/src/: lib.rs  post.rs  prelude.rs  users.rs
crud-with-sea_orm/src/shared/: mod.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
rustlings/: .rustlings-state.txt
