[package]
name = "actix_web_task_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "^4"
uuid = {version = "^0.8", features = ["v4"]}
serde = {version = "^1", features = ["derive"]}
sea-orm = { version = "2.0.0-rc.28", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }
env_logger = "0.8"
log = "^0.4"
strum_macros ="^0.24"
strum = {version = "^0.24", features = ["derive"]}
